# guitar_tab_generation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.dev  Dockerfile.gpu
docs/: basic-pitch-backend.md  basic-pitch-backend.zh-TW.md  daw-bundle-export.md  daw-bundle-export.zh-TW.md  demucs-runtime-gate.md  demucs-runtime-gate.zh-TW.md  development-flow.zh-TW.md  docker.md  docker.zh-TW.md  model-smoke.md  model-smoke.zh-TW.md  torch-first-ai-backend-roadmap.md  torch-first-ai-backend-roadmap.zh-TW.md  torch-optional-dependencies.md  torch-optional-dependencies.zh-TW.md  torchcrepe-f0-calibration.md  torchcrepe-f0-calibration.zh-TW.md  usage-guardrails.md  usage-guardrails.zh-TW.md
docs/adr/: 20260513-demo-tutorial-daw-sequencing.md  20260513-legal-url-input-policy.md  20260516-multi-track-daw-export.md  20260517-demucs-runtime-install-gate.md  20260518-p33-local-job-queue-gpu-guard.md  20260518-p34-legal-url-policy.md  20260518-p37-model-cache-safety.md  20260518-p38-workspace-schema.md  README.md
docs/agents/: guitar-tab-agent.md
docs/interviews/: guitar-tab-generation-product-20260512T122521Z.md
docs/plans/: backlog-20260512.md  development-execution-plan-20260513.md  next-development-roadmap-sdd-tdd-20260512.md  open-questions.md  p0-dev-flow-ci-prd-20260512.md  p0-dev-flow-ci-test-spec-20260512.md  p1-audio-backend-adapters-prd-20260512.md  (+80 more)
fixtures/: README.md
schemas/: arrangement.schema.json
tests/: conftest.py  test_agent_skill_contract.py  test_ai_backends_cli.py  test_ai_runtime_cli.py  test_docker_compose_contract.py  test_input_policy.py  test_model_smoke_cli.py  test_quality_gate.py  test_repo_hygiene.py  test_research_planning_contract.py  test_schema_quality.py  test_torch_dependency_group_contract.py  test_url_policy_guard.py
(+171 files in other folders)
