[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tab-generation"
version = "0.1.0"
description = "Local-audio-first MVP skeleton for generating guitar sketch TAB artifacts."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
ai = [
    "basic-pitch>=0.4.0",
    "setuptools>=68,<81",
]

[project.scripts]
guitar-tab-generation = "guitar_tab_generation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
