[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tab-generation"
version = "0.1.0"
description = "Local-audio-first MVP skeleton for generating guitar sketch TAB artifacts."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
ai = [
    "basic-pitch>=0.4.0",
    "setuptools>=68,<81",
]
torch-ai = [
    "torch>=2.11,<2.12",
    "torchaudio>=2.11,<2.12",
    "torchcodec>=0.12,<0.13",
    "torchcrepe>=0.0.24,<0.1",
    "demucs>=4.0.1,<5",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
guitar-tab-generation = "guitar_tab_generation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
